# hpm

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE_CODE_SETUP.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_FOLLOWUP.md  Makefile  PI_EXTENSION.md  README.md  SPEC.md  TEAM_MODE.md  deepseek-v4-pro-review.md  hermes-pi-memory-design.html  hpm_mcp_server.py  pyproject.toml
planned/: CONFLICT_DETECTOR.md  DEFERRED_OPTIMIZATIONS.md  WIKI_LAYER.md
src/hpm/: __init__.py  __main__.py  answer.py  cli.py  config.py  conflict.py  daily.py  dashboard.py  db.py  decay.py  embed.py  llm.py  rerank.py  sidecar.py  summarize.py
src/hpm/wiki/: __init__.py  compile.py  find.py  init.py  lint.py  sync.py  types.py
tests/: test_answer.py  test_coherence.py  test_concurrent.py  test_conflict.py  test_daily.py  test_db.py  test_decay.py  test_embed.py  test_llm.py  test_mcp.py  test_rerank.py  test_sidecar.py  test_summarize.py  test_wiki.py  test_wiki_phase_bc.py
