[project]
name = "hpm"
version = "0.1.0"
description = "Hermes Pi Memory — shared local vector memory for AI agents"
authors = [
    {name = "Ryan Pearson", email = "lumberjackchef@proton.me"},
]
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.0",
    "fastembed>=0.5.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.scripts]
hpm = "hpm.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
reranker = [
    "sentence-transformers>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
